Cache Buster Headers + Version 2.0
🔥 ANTI-CACHE HEADERS:
- Aggiunto meta cache-control: no-cache, no-store
- Meta pragma: no-cache per browser legacy
- Meta expires: 0 per force refresh
- Version 2.0 nel title per tracking

📅 TIMESTAMP: 2025-10-07-20:59
- Forzato refresh completo GitHub Pages
- Headers anti-cache per tutti i browser
- Version bump per identificare aggiornamento

🚀 SOLUZIONE DEFINITIVA:
- Index.html standalone senza dipendenze
- Meta tags per bypassare ogni cache
- Design moderno con glassmorphism
- Zero errori 404 possibili

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>🌍 Quiz Collaborativo - Ciclo del Carbonio</title>    <title>Quiz Collaborativo - Ciclo del Carbonio</title>
+    <title>🌍 Quiz Collaborativo - Ciclo del Carbonio - v2.0</title>
+    <!-- Cache Buster: 2025-10-07-20:59 -->
+    <meta name="cache-control" content="no-cache, no-store, must-revalidate">
+    <meta name="pragma" content="no-cache">
+    <meta name="expires" content="0">    <title>Quiz Collaborativo - Ciclo del Carbonio</title>
 
     <style>    <style>
 
