fix(pages): SPA redirect robusto su GitHub Pages
- 404.html preserva path/query/hash e redirige con ?p=
- index.html ripristina location da ?p= per wouter

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,400&display=swap" rel="stylesheet">
+    <script>
+      // Ripristina la path originale se presente in ?p=
+      (function () {
+        try {
+          var params = new URLSearchParams(window.location.search);
+          var p = params.get('p');
+          if (p) {
+            window.history.replaceState(null, '', p);
+          }
+        } catch (e) {}
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
