feat(seo): titoli dinamici per tab e title 404 coerente

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Il Ciclo del Carbonio - Progetto Scolastico</title>
+    <title>Il Ciclo del Carbonio - HOME</title>
     <meta name="description" content="Sito educativo sul ciclo del carbonio per studenti delle scuole superiori. Materiale didattico completo per chimica e educazione ambientale.">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
