--- a/client/public/404.html
+++ b/client/public/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ciclo del Carbonio - Redirect</title>
+  <title>Il Ciclo del Carbonio - Pagina non trovata</title>
   <script>
     // Preserva il path originale e reindirizza all'index con ?p=
     (function () {
